fixed issues with reviews/add/edit overlapping the manga

--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -10,11 +10,11 @@
 }
 
 .reviews {
-  height: 275px;
+  // height: 275px;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-top: 10px;
+  // margin-top: 10px;
 }
 
 .reviewForm {
